--- a/healthcare/templates/healthcare/doctor.html
+++ b/healthcare/templates/healthcare/doctor.html
@@ -135,7 +135,7 @@
 
   <!-- team section -->
 
-  <section class="team_section layout_padding">
+  <!-- <section class="team_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -234,9 +234,66 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end team section -->
+
+<!-- new team section -->
+
+  <section class="team_section layout_padding">
+      <div class="container">
+          <div class="heading_container heading_center">
+              <h2>
+                  Our <span>Doctors</span>
+              </h2>
+          </div>
+          <div class="carousel-wrap ">
+              <div class="owl-carousel team_carousel">
+                  {% for doctor in doctors %}
+                  <div class="item">
+                      <div class="box">
+                          <div class="img-box">
+                              <img src="{{ doctor.profile_image}}" alt="{{ doctor.name }}" />
+                          </div>
+                          <div class="detail-box">
+                              <h5>
+                                  {{ doctor.name }}
+                              </h5>
+                              <h6>
+                                  {{ doctor.specialization }}
+                              </h6>
+                              <div class="social_box">
+                                  {% if doctor.facebook_link %}
+                                  <a href="{{ doctor.facebook_link }}" target="_blank">
+                                      <i class="fa fa-facebook" aria-hidden="true"></i>
+                                  </a>
+                                  {% endif %}
+                                  {% if doctor.twitter_link %}
+                                  <a href="{{ doctor.twitter_link }}" target="_blank">
+                                      <i class="fa fa-twitter" aria-hidden="true"></i>
+                                  </a>
+                                  {% endif %}
+                                  {% if doctor.linkedin_link %}
+                                  <a href="{{ doctor.linkedin_link }}" target="_blank">
+                                      <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                  </a>
+                                  {% endif %}
+                                  {% if doctor.instagram_link %}
+                                  <a href="{{ doctor.instagram_link }}" target="_blank">
+                                      <i class="fa fa-instagram" aria-hidden="true"></i>
+                                  </a>
+                                  {% endif %}
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  {% endfor %}
+              </div>
+          </div>
+      </div>
+  </section>
+
+<!-- end new team section -->
 
 
   <!-- info section -->
