--- a/healthcare/templates/healthcare/doctor.html
+++ b/healthcare/templates/healthcare/doctor.html
@@ -75,7 +75,7 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
-              <img src="images/logo.png" alt="">
+              <img src="{% static 'images/logo.png' %}" alt="">
             </a>
             </a>
 
@@ -302,7 +302,7 @@
       <div class="info_top">
         <div class="info_logo">
           <a href="">
-            <img src="images/logo.png" alt="">
+            <img src="{% static 'images/logo.png' %}" alt="">
           </a>
         </div>
         <div class="info_form">
@@ -389,7 +389,7 @@
               </h5>
               <div class="post_box">
                 <div class="img-box">
-                  <img src="images/post1.jpg" alt="">
+                  <img src="{% static 'images/post1.jpg' %}" alt="">
                 </div>
                 <p>
                   Normal
@@ -398,7 +398,7 @@
               </div>
               <div class="post_box">
                 <div class="img-box">
-                  <img src="images/post2.jpg" alt="">
+                  <img src="{% static 'images/post2.jpg' %}" alt="">
                 </div>
                 <p>
                   Normal
@@ -414,7 +414,7 @@
               </h5>
               <div class="post_box">
                 <div class="img-box">
-                  <img src="images/post3.jpg" alt="">
+                  <img src="{% static 'images/post3.jpg' %}" alt="">
                 </div>
                 <p>
                   Normal
@@ -423,7 +423,7 @@
               </div>
               <div class="post_box">
                 <div class="img-box">
-                  <img src="images/post4.png" alt="">
+                  <img src="{% static 'images/post4.jpg' %}" alt="">
                 </div>
                 <p>
                   Normal
@@ -451,9 +451,9 @@
   <!-- footer section -->
 
   <!-- jQery -->
-  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
   <!-- bootstrap js -->
-  <script src="js/bootstrap.js"></script>
+  <script src="{% static 'js/bootstrap.js'%}"></script>
   <!-- nice select -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js" integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
   <!-- owl slider -->
@@ -461,7 +461,7 @@
   <!-- datepicker -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
   <!-- custom js -->
-  <script src="js/custom.js"></script>
+  <script src="{% static 'js/custom.js'%}"></script>
 
 
 </body>
