--- a/healthcare/templates/healthcare/doctor.html
+++ b/healthcare/templates/healthcare/doctor.html
@@ -253,7 +253,7 @@
                   <div class="item">
                       <div class="box">
                           <div class="img-box">
-                              <img src="{{ doctor.profile_image}}" alt="{{ doctor.name }}" />
+                              <img src="{% static doctor.profile_image.url %}" alt="{{ doctor.name }}" />
                           </div>
                           <div class="detail-box">
                               <h5>
