Make migrations and delete image field

--- a/healthcare/templates/healthcare/doctor.html
+++ b/healthcare/templates/healthcare/doctor.html
@@ -254,7 +254,7 @@
                   <div class="item">
                       <div class="box">
                           <div class="img-box"> 
-                            <img src="{{ doctor.profile_image.url }}" alt="{{ doctor.name }}" />
+                            <img src="{% static 'images/d1.jpg' %}" alt="{{ doctor.name }}" />
                           </div>
                           <div class="detail-box">
                               <h5>
