--- a/healthcare/templates/healthcare/doctor.html
+++ b/healthcare/templates/healthcare/doctor.html
@@ -254,7 +254,8 @@
                   <div class="item">
                       <div class="box">
                           <div class="img-box"> 
-                            <img src="{% static 'images/d1.jpg' %}" alt="{{ doctor.name }}" />
+                            <!-- <img src="{% static 'images/d2.png' %}" alt="{{ doctor.name }}"> -->
+                            <img src="{% static 'images/' %}{{ doctor.image_filename }}" alt="{{ doctor.name }}">
                           </div>
                           <div class="detail-box">
                               <h5>
@@ -425,7 +426,7 @@
               </div>
               <div class="post_box">
                 <div class="img-box">
-                  <img src="{% static 'images/post4.jpg' %}" alt="">
+                  <img src="{% static 'images/post4.png' %}" alt="">
                 </div>
                 <p>
                   Normal
