--- a/healthcare/templates/healthcare/header.html
+++ b/healthcare/templates/healthcare/header.html
@@ -83,7 +83,7 @@
               <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
                 <ul class="navbar-nav  ">
                   <li class="nav-item ">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'home' %}"">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html"> About</a>
@@ -92,7 +92,7 @@
                     <a class="nav-link" href="treatment.html">Treatment</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="doctor.html">Doctors</a>
+                    <a class="nav-link" href="{% url 'doctors' %}">Doctors</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="testimonial.html">Testimonial</a>
