--- a/healthcare/templates/healthcare/about.html
+++ b/healthcare/templates/healthcare/about.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en" title="about">
     <meta name="description" content="about">
+    <meta charset="UTF-8">
     <title>about</title>
     <body class="sub_page">
         {% include "healthcare/header.html" %}
