--- a/healthcare/templates/healthcare/footer.html
+++ b/healthcare/templates/healthcare/footer.html
@@ -113,7 +113,7 @@
 <footer class="footer_section">
     <div class="container">
         <p>
-            &copy; <span id="displayYear"></span> All Rights Reserved By
+            <span id="displayYear"></span> All Rights Reserved By
             <a href="https://html.design/">Free Html Templates</a>
         </p>
     </div>
