--- a/healthcare/templates/healthcare/index.html
+++ b/healthcare/templates/healthcare/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en" title="home">
     <meta name="description" content="about">
+    <meta charset="UTF-8">
     <title>Home</title>
     <body>
         {% include "healthcare/header.html" %}
