--- a/healthcare/templates/healthcare/doctor.html
+++ b/healthcare/templates/healthcare/doctor.html
@@ -1,7 +1,8 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en" title="doctors">
+<html lang="en" title="doctors" >
     <meta name="description" content="doctors">
+    <meta charset="UTF-8">
     <title>doctors</title>
     <body class="sub_page">
         {% include "healthcare/header.html" %}
